# invst

./: Dockerfile  chart.py  dash_app.py  docker-compose.yml  helpers.py  hyperparams.json  main.ipynb  pyproject.toml
data/: gspc.csv
